CASL-1659: downgrade modules that are dependencies to lib-moderation to java 11.
Signed-off-by: Marcin-Here <ext-marcin.grabowski@here.com>